# frames-limiter

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  appveyor.yml  build.cmd  build.ps1
src/_meta/: component.json  native.json  package.json
src/assets_swf/: frames_limiter_settings_battle_hook.swf  frames_limiter_settings_lobby_hook.swf
src/assets_swf/_meta/: assets.json
src/native/: CMakeLists.txt  debug_logger.h  frames_limiter.cpp  frames_limiter.h  python_module.cpp
src/python/: __init__.py
src_cpp/: CMakeLists.txt  dllmain.cpp  dllmain.h  frames_limiter.cpp  frames_limiter.h  memory_helper.cpp  memory_helper.h  time_helper.h  winapi_helper.h
src_flash/: frames_limiter_settings_lobby_hook.swf
src_flash/frames_limiter_settings_battle_hook/: DOMDocument.xml  PublishSettings.xml
src_flash/frames_limiter_settings_lobby_hook/: DOMDocument.xml  PublishSettings.xml
src_flash/src/com/poliroid/gui/frames_limiter/: BattleHook.as  BattleInjector.as  LobbyHook.as  SettingsUI.as
src_flash/src/me/poliroid/gui/frames_limiter/: BattleHook.as  BattleInjector.as  LobbyHook.as  SettingsUI.as
src_flash/src/mods/common/: AbstractComponentInjector.as  BattleDisplayable.as
src_meta/: wotmod_meta.xml.in  xfw_package.json
src_python/: __init__.py
